@@ -29,7 +29,7 @@ tasks.withType(JavaCompile).configureEach { options.encoding = 'UTF-8' }
 
 java {
     toolchain {
-        languageVersion = JavaLanguageVersion.of(21)
+        languageVersion = JavaLanguageVersion.of(25)
     }
 }
 
@@ -108,12 +108,12 @@ dependencies {
     implementation fileTree(dir: 'lib', include: ['*.jar'])
 
     // from maven
-    implementation "commons-io:commons-io:2.21.0"
+    implementation "commons-io:commons-io:2.22.0"
     implementation "org.apache.commons:commons-lang3:3.20.0"
     implementation "org.apache.commons:commons-text:1.15.0"
-    implementation "org.apache.logging.log4j:log4j-core:2.25.3"
+    implementation "org.apache.logging.log4j:log4j-core:2.25.4"
     implementation "org.freemarker:freemarker:2.3.34"
-    implementation("com.google.code.gson:gson:2.13.2") {
+    implementation("com.google.code.gson:gson:2.14.0") {
         dep -> dep.exclude group: 'com.google.errorprone', module: 'error_prone_annotations'
     }
     implementation "com.github.sps.junidecode:junidecode:0.3"
@@ -121,11 +121,11 @@ dependencies {
     implementation "org.jboss.forge.roaster:roaster-jdt:2.31.0.Final"
     implementation "org.snakeyaml:snakeyaml-engine:3.0.1"
     implementation "org.reflections:reflections:0.10.2"
-    implementation "com.google.guava:guava:33.5.0-jre"
+    implementation "com.google.guava:guava:33.6.0-jre"
     implementation "de.javagl:obj:0.4.0"
     implementation "com.univocity:univocity-parsers:2.9.1"
     implementation "org.slf4j:slf4j-nop:2.0.17"
-    implementation "org.gradle:gradle-tooling-api:9.4.0"
+    implementation "org.gradle:gradle-tooling-api:9.4.1"
     implementation "net.java.balloontip:balloontip:1.2.4.1"
     implementation "com.atlassian.commonmark:commonmark:0.17.0"
     implementation "com.atlassian.commonmark:commonmark-ext-autolink:0.17.0"
@@ -159,7 +159,7 @@ dependencies {
 test {
     useJUnitPlatform()
 
-    jvmArgs '--add-opens', 'java.base/java.lang=ALL-UNNAMED'
+    jvmArgs '--add-opens', 'java.base/java.lang=ALL-UNNAMED', '--enable-native-access', 'ALL-UNNAMED,jcef'
 
     // default max heap is VM RAM / 4, which may be too low on low RAM VMs
     maxHeapSize = "4096m"
@@ -188,12 +188,14 @@ javadoc {
     classpath = configurations.runtimeClasspath
 
     options.addStringOption('Xdoclint:none', '-quiet')
+    options.addStringOption('tag', 'apiNote:a:API note:')
+    options.addStringOption('tag', 'implNote:a:Implementation note:')
 }
 
 tasks.register('runMCreator', JavaExec.class) {
     dependsOn jar
 
-    jvmArgs '--add-opens', 'java.base/java.lang=ALL-UNNAMED'
+    jvmArgs '--add-opens', 'java.base/java.lang=ALL-UNNAMED', '--enable-native-access', 'ALL-UNNAMED,jcef'
 
     classpath += sourceSets.main.runtimeClasspath
 
